--- a/css/partials/_projects.scss
+++ b/css/partials/_projects.scss
@@ -1,10 +1,3 @@
-  #projects-image {
-    height: 25%;
-    width: auto;
-    // padding: 5% 10%;
-    align-items: center;
-  }
-  
-  #projects-card {
-    height: 25%;
-  }
+// #image-card {
+//     margin: 25%;
+// }
